--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         WXSHARE.config({debug: false});
         WXSHARE.ready(function() {
             var option = {
-                  title: "",
+                  title: "中华传统文化网络知识竞赛",
                   link: "",
-                  imgUrl: '',
-                  desc: '',
+                  imgUrl: 'https://wx.idsbllp.cn/nodejs/competition/src/assets/logo.jpg',
+                  desc: '重邮共青团“中华传统文化知识竞赛”火热来袭！有你有礼哦～赶快一起来答题吧！',
                   type: '',
                   success: function() {
                       console.log('分享成功');
