修改大标题

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <!-- <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"> -->
       <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=contain">
 
-    <title>中华传统文化网络知识竞赛</title>
+    <title>“中华优秀传统文化学习”网络竞赛</title>
   </head>
   <body>
     <div id="app"></div>
@@ -15,10 +15,10 @@
         WXSHARE.config({debug: false});
         WXSHARE.ready(function() {
             var option = {
-                  title: "中华传统文化网络知识竞赛",
+                  title: "“四进四信”专题 | 重邮共青团“中华优秀传统文化学习”网络竞赛，等你打榜！",
                   link: "",
                   imgUrl: 'https://wx.idsbllp.cn/nodejs/competition/src/assets/logo.jpg',
-                  desc: '重邮共青团“中华传统文化知识竞赛”火热来袭！有你有礼哦～赶快一起来答题吧！',
+                  desc: '重邮共青团学习习近平新时代中国特色社会主义思想微课堂。',
                   type: '',
                   success: function() {
                       console.log('分享成功');
